cmake_minimum_required(VERSION 3.25)
project(Work)

set(CMAKE_CXX_STANDARD 14)

include_directories(learn)

# ==== C Programs ====
add_executable(Attendance learn/Attendance.c)
add_executable(EmployeeRecord learn/EmployeeRecord.c)
add_executable(EmployeeRecords learn/EmployeeRecords.c)
add_executable(PointerSalary learn/PointerSalary.c)
add_executable(StringCopy learn/StringCopy.c)
add_executable(StudentRecord learn/StudentRecord.c)

# ==== C++ Programs ====
add_executable(ArrayAverage learn/ArrayAverage.cpp)
add_executable(TwoDOperation learn/2Doperation.cpp)
add_executable(Banking learn/banking.cpp)
add_executable(Calculator learn/calculator.cpp)
add_executable(CalculatorFunction learn/calculatorFunction.cpp)
add_executable(Configuration learn/Configuration.cpp)
add_executable(Debugging learn/Debugging.cpp)
add_executable(Deletion learn/Deletion.cpp)
add_executable(Ecommerce learn/eCommerceShippingCalculator.cpp)
add_executable(Environment learn/Environment.cpp)
add_executable(InterestCalculator learn/InterestCalculator.cpp)
add_executable(Logging learn/Logging.cpp)
add_executable(Macros learn/Macros.cpp)
add_executable(Reversal learn/Reversal.cpp)
add_executable(Search learn/Search.cpp)
add_executable(SineSeries learn/SineSeries.cpp)
add_executable(SineSeries2 learn/SineSeries2.cpp)
add_executable(Sorting learn/Sorting.cpp)
add_executable(TemperatureCalculator learn/temperatureCalculator.cpp)

# ==== Root Folder Programs ====
add_executable(Array Array.cpp)
add_executable(BasicsData BasicsData.cpp)
add_executable(Constructor Constructor.cpp)
add_executable(Introduction Introduction.cpp)
add_executable(Memory1 memory1.cpp)
add_executable(Memory2 memory2.cpp)
add_executable(Oops Oops.cpp)
add_executable(Ooops ooooops.cpp)
add_executable(Pointer Pointer.cpp)
add_executable(PointerMath PointerMath.cpp)
add_executable(PreProcessor PreProcessor.cpp)
add_executable(Scond Scond.cpp)
add_executable(StringGetInput StringGetInput.cpp)
